new multi select - wip. logo color.

--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,8 @@
                     <a class="navbar-brand" href="#" style="margin-left:-20px">
                         <span style="font-size:200%;position:relative;padding-right:40px;">
                             ${router.title & t}
-                            <img src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;position:absolute;right:-46px;top:12px;" />
+                            <img if.bind="theme.blue_logo" src="${theme.files.gb_logo_blue}" width="32" style="float:right;margin-left:15px;position:absolute;right:-46px;top:12px;" />
+                            <img if.bind="! theme.blue_logo" src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;position:absolute;right:-46px;top:12px;" />
                         </span>
                     </a>
                 </div>
