--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -92,7 +92,7 @@
                             settings.bind="options_settings_new"
                             name="topics"
                             place_holder_text="photos.click-topic"
-                            change.delegate="handle_topic_change($event) ">
+                            ms-change.delegate="handle_topic_change($event) ">
                         </multi-select-new>
                     </div>
                     <div class="row" style="margin-bottom:15px;position:relative;" if.bind="! user.debugging">
@@ -111,7 +111,7 @@
                             place_holder_text="photos.click-photographer"
                             ungrouped_selected_options.bind="params.selected_photographers"
                             settings.bind="photographers_settings_new"
-                            change.delegate="handle_photographer_change($event)">
+                            ms-change.delegate="handle_photographer_change($event)">
                         </multi-select-new>
                         <multi-select options.bind="photographer_list"  if.bind="!user.debugging"
                             place_holder_text="photos.click-photographer"
