--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -54,6 +54,12 @@
                     ${'palettes.' + palette & t}
                 </a>
             </li>
+            <li>
+                <a class="dropdown-item" href="#" click.trigger="toggle_logo()">
+                    <img if.bind="! theme.blue_logo" src="${theme.files.gb_logo_blue}" width="20" />
+                    <img if.bind="theme.blue_logo" src="${theme.files.gb_logo_png}" width="20" />
+                </a>
+            </li>
         </ul>
     </div>
 
