mostly style issues

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -35,7 +35,7 @@
                             <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;">
                                 ${story.name}
                             </h4>
-                            <div class="story-prefix">
+                            <div class="story-preview">
                                 <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story_preview" 
                                     style="text-align:right;max-height:50px;width:100%;overflow:hidden;">
                                 </p>
