--- a/src/resources/elements/multi-select/multi-select-new.html
+++ b/src/resources/elements/multi-select/multi-select-new.html
@@ -40,7 +40,7 @@
         <!-- unselected options -->
         <div class="row options unselected" 
             css="max-height:${filter || display_option_list ? settings.height_unselected : 0}px;" 
-            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter) || selected_options_set.size > 0)">
+            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' | take : 199">
                     <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px">
