--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -64,13 +64,13 @@
                         </button>
                     </form>
                     <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
-                        <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="rtl" 
+                        <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="${theme.rtltr}" 
                             if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
                             <div style="height:130px;overflow:hidden;padding-right:20px;padding-left:20px;padding-top:0px;cursor:pointer;"
                                 click.delegate="jump_to_the_full_story($event, story)">
                                 <!--<div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">-->
-                                <div style="margin-bottom: 10px;">
+                                <div style="margin-bottom: 10px;" class="story-preview">
                                     <editable settings.bind="{show_date:false, class:'story-section', checkable: true}" 
                                         story.bind="story" change.delegate="toggle_story_selection(story, $event)">
                                     </editable>
