new multi select - wip

--- a/src/resources/elements/multi-select/multi-select-new.html
+++ b/src/resources/elements/multi-select/multi-select-new.html
@@ -22,16 +22,31 @@
                 <li repeat.for="item of selected_options" class="${item.group_number % 2 ? 'odd-group' : 'even-group'}">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px;width:100%;height:24px;position:relative;">
                         <!-- lock/unlock button -->
-                        <i class="far fa-${item.group_number==open_group ? 'lock-open-alt' : 'lock-alt'}" 
+                        <i class="far fa-${item.group_number==open_group ? 'lock-open-alt' : 'lock-alt'} tool" 
                             if.bind="item.first" 
                             style="position:absolute;left:0;top:4px;"
                             click.delegate="toggle_group(item.group_number)">
                         </i>
-                        <i class="far fa-times-circle"
-                            style="position:absolute;left:20px;top:4px;"
+                        <i class="far fa-${item.option.sign}-square fa-rotate-180 tool"
+                            if.bind="item.first" 
+                            style="position:absolute;left:18px;top:4px;"
+                            click.delegate="toggle_sign(item.option, $event)">
+                        </i>
+                        <i class="far fa-times-circle tool"
+                            style="position:absolute;left:34px;top:4px;"
                             click.delegate="unselect_item(item, $index)">
                         </i>
-                        <span click.delegate="move_item(item)" style="height:24px;padding-right:5px;">${item.group_number}: ${item.option.name}</span>
+                        <i class="far fa-pencil fa-rotate-180 fa-rotate-180 tool"
+                            if.bind="can_edit_name"
+                            style="position:absolute;left:50px;top:4px;"
+                            click.trigger="edit_option(option, $event)">
+                        </i>
+                        <i class="far fa-trash-alt tool"
+                            if.bind="can_delete"
+                            style="position:absolute;left:66px;top:4px;"
+                            click.delegate="remove_option(option, $event)">
+                        </i>
+                        <span click.delegate="move_item(item)" style="height:24px;padding-right:5px;"><span class="keyword-area">${item.option.name}</span></span>
                     </div>
                 </li>
             </ul>
