--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -144,7 +144,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
+                    <div class="member-story-panel member-story-preview" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_preview ">
                         </p>
                     </div>
@@ -157,7 +157,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
+                    <div class="member-story-panel member-story-preview" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_preview">
                         </p>
                     </div>
@@ -170,12 +170,12 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
+                    <div class="member-story-panel member-story-preview" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_preview">
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_1)">
+                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
@@ -183,7 +183,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
+                    <div class="member-story-panel member-story-preview" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_preview">
                         </p>
                     </div>
