more multi select cleanup

--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -1,5 +1,5 @@
-<template class="multi-select-new">
-    <require from="./multi-select-new.css">
+<template class="multi-select">
+    <require from="./multi-select.css">
     </require>
     <div class="input-group search-filter" if.bind="options.length > 10">
         <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32"></search-input>
