--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -87,21 +87,21 @@
                 <div class="col-md-3" style="padding-right:6px;">
                     <div class="row" style="margin-bottom:15px;position:relative;">
                         <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
-                        <multi-select-new options.bind="topic_list"
+                        <multi-select options.bind="topic_list"
                             selected_options.bind="params.selected_topics"
-                            settings.bind="options_settings_new"
+                            settings.bind="options_settings"
                             name="topics"
                             place_holder_text="photos.click-topic"
                             ms-change.delegate="handle_topic_change($event) ">
-                        </multi-select-new>
+                        </multi-select>
                     </div>
                     <div class="row">
-                        <multi-select-new options.bind="photographer_list"
+                        <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             ungrouped_selected_options.bind="params.selected_photographers"
-                            settings.bind="photographers_settings_new"
+                            settings.bind="photographers_settings"
                             ms-change.delegate="handle_photographer_change($event)">
-                        </multi-select-new>
+                        </multi-select>
                     </div>
                     <div class="row" style="margin-top: 10px;">
                         <form role="form">
