new multi select. some css.

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -11,9 +11,9 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
                         <form class="form-inline">
-                            <div class="input-group">
+                            <!--<div class="input-group">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
-                            </div>
+                            </div>-->
                             <div class="form-group" if.bind="caller_type=='story'">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
                                     ${'photos.search-member' & t}
