--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./members.css"></require>
-    <div style="padding: 15px;padding-top:0;background:lightgray;">
+    <div style="padding: 15px;padding-top:0;background:lightgray;cursor:default;">
         <div class="row" style="background-color:gray;height:60px;padding-top:13px;">
             <div class="col-md-3">
                 <a click.trigger="create_new_member()" class="btn btn-success cl-create-btn" if.bind="gender">
@@ -31,7 +31,7 @@
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
                         style="width:65px;float:right;min-height:88px;font-size:9px;vertical-align: text-bottom;">
 
-                        <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;" aubs-tooltip="text.bind:member.name">
+                        <a click.delegate="select(member)" style="vertical-align: text-bottom;align-content: center;cursor:pointer;" aubs-tooltip="text.bind:member.name">
                             <img style="width:50px;height:50px;border-radius:50%;" src.bind="member.facePhotoURL" />
                             <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
                         </a>
