--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -8,12 +8,12 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:32px;">
                         <form class="form-inline">
-                            <div class="input-group" style="width:400px;" if.bind="user.privileges.DEVELOPER">
+                            <!--<div class="input-group" style="width:400px;" if.bind="user.privileges.DEVELOPER">
                                 <search-input value.bind="filter" 
                                     placeholder="stories.filter" height="38"
                                     change.delegate="update_story_list()">
                                 </search-input>
-                            </div>
+                            </div>-->
                             <div class="form-group" if.bind="phase=='can-modify-tags'">
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
                                     ${'photos.save-merges' & t}
