matters of style

--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -83,7 +83,7 @@
                 <div class="col-md-3">
                     <div class="row" style="position:relative;">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
-                        <help topic="tags" position="left" style="position:absolute;left:0px;top:26px;"></help>
+                        <help topic="tags" position="bottom" style="position:absolute;left:0px;top:26px;"></help>
                         <multi-select options.bind="topic_list"
                             place_holder_text="photos.click-topic" 
                             selected_options.bind="params.selected_topics"
@@ -107,7 +107,7 @@
                         <span if.bind="num_of_stories">${num_of_stories} ${'stories.matching-stories' & t}</span>
                         <span if.bind="! num_of_stories">&nbsp;</span>
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.words' & t}</div>
-                        <help topic="words" position="top" style="position:absolute;left:0px;top:46px;" params.bind="help_data"></help>
+                        <help topic="words" position="left" style="position:absolute;left:0px;top:46px;" params.bind="help_data"></help>
                         <multi-select 
                             options.bind="stories_index" 
                             selected_options.bind="params.selected_words"
