--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -35,7 +35,8 @@
                         <span style="float:right;margin-right:-10px;">${'stories.associated-members' & t}</span>
                     </div>
                 </div>
-                <div if.bind="members.length>0" id="member-list" class="row stories-member-list content-area" style="max-height:400px;overflow:auto;overflow-x:hidden;">
+                <div if.bind="members.length>0" id="member-list" class="row stories-member-list content-area" 
+                    css="max-height:${user.editing ? 200 : 400}px;overflow:auto;overflow-x:hidden;">
                     <ul class="list-group">
                         <li class="list-group-item" repeat.for="member of members">
                             <a route-href="route: member-details; params.bind: {id:member.id}">
@@ -45,7 +46,8 @@
                         </li>
                     </ul>
                 </div>
-                <div if.bind="user.editing && candidates.length>0" id="candidate-list" class="row stories-member-list content-area" style="max-height:400px;overflow:auto;overflow-x:hidden;">
+                <div if.bind="user.editing && candidates.length>0" id="candidate-list" class="row stories-member-list content-area" 
+                    style="max-height:200px;overflow:auto;overflow-x:hidden;">
                     <h3 style="margin-right:40px;">${'photos.candidates' & t}</h3>
                     <ul class="list-group">
                         <li class="list-group-item" repeat.for="candidate of candidates">
